--- a/pod_nginx.yaml
+++ b/pod_nginx.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   containers:
     - name: nginx
-      image: nginx:latest
+      image: 049780446181.dkr.ecr.ap-south-1.amazonaws.com/spark:nginx-test
       imagePullPolicy: Always
       ports:
         - containerPort: 80
